adding alt tags for img and non listed links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     You'll enjoy the offerings of a larger bank along with the entrepreneurial spirit and growth of a smaller lender.
                 </div>
                 <div class="header-button">
-                    <button type="submit" class="btn">View Careers</button>
+                    <button type="submit" alt="Button to view careers" class="btn">View Careers</button>
                 </div>
             </div>
             <div class="header">Get the Citizens advantage.</div>
@@ -95,9 +95,9 @@
         <div class="quotes">
             <div class="quotes-grid-wrapper">
                 <div class="quotes-wrapper">
-                    <img class="quotes-bio-pic" src="images/Ellipse 1 copy 2.png">
+                    <img class="quotes-bio-pic" src="images/Ellipse 1 copy 2.png" alt="image of Ed, Mortgage Loan Officer in Buffalo">
                     <div>
-                        <img class="quotes-image" src="images/“.png">
+                        <img class="quotes-image" src="images/“.png" alt="quotation marks">
                         <p class="quotes-text">
                             “Citizens Bank is in a growth mode. We're 
                             planning to be around for the long term and we're proving that by growing sales."
@@ -108,9 +108,9 @@
                     </p>
                 </div>
                 <div class="quotes-wrapper">
-                    <img class="quotes-bio-pic" src="images/Ellipse 1 copy.png">
+                    <img class="quotes-bio-pic" src="images/Ellipse 1 copy.png" alt="quotation marks">
                     <div>
-                        <img class="quotes-image" src="images/“.png">
+                        <img class="quotes-image" src="images/“.png" alt="image of Mark, Senior Mortgage Loan Officer in Chicago">
                         <p class="quotes-text">
                             “The senior management is very committed to the mortgage lending business on every level
                              - from the top, down. We're all going in the same direction and that's what I like. So, if I have a question or idea, I can get answers. 
@@ -122,9 +122,9 @@
                     </p>
                 </div>
                 <div class="quotes-wrapper">
-                    <img class="quotes-bio-pic" src="images/image.png">
+                    <img class="quotes-bio-pic" src="images/image.png" alt="image of John, Mortgage Loan Officer in Charleston">
                     <div>
-                        <img class="quotes-image" src="images/“.png">
+                        <img class="quotes-image" src="images/“.png" alt="quotation marks">
                         <p class="quotes-text">
                             “It is so great to be part of an organization that is looking for solutions and creativity versus creating barriers that cause 
                             problems."
@@ -139,7 +139,7 @@
     
         <div class="foot">
             <div class="footer-wrapper">
-                <img class="social-img" src="images/social icons copy 3.png">
+                <img class="social-img" src="images/social icons copy 3.png" alt="social media icons">
                 <div class="eoe">
                     It is the policy of Citizens Bank to provide equal employment and advancement opportunities to all colleagues and applicants for employment without regard to
                      race, color, ethnicity, religion, gender, pregnancy/childbirth, age, national origin, sexual orientation, gender identity or expression, disability or perceived 
