final renaming for readablity

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </div>
             <div class="header">Get the Citizens advantage.</div>
         </div>
-        <div class="grid">
-            <div class="grid-template-wrapper">
-                <div class="grid-element border">
-                    <div class="grid-text-wrapper">
+        <div class="citizens-advantage-grid">
+            <div class="citizens-advantage-grid-template-wrapper">
+                <div class="citizens-advantage-grid-element border">
+                    <div class="citizens-advantage-grid-text-wrapper">
                         <div class="home-loan-title">Unique products</div>
                         <p class="home-loan-text">
                             Our loan programs offer a variety of solutions to help you compete effectively across a broad spectrum of borrowers. With
@@ -47,8 +47,8 @@
                         </a>
                     </div>
                 </div>
-                <div class="grid-element">
-                    <div class="grid-text-wrapper">
+                <div class="citizens-advantage-grid-element">
+                    <div class="citizens-advantage-grid-text-wrapper">
                         <div class="home-loan-title">Exceptional support</div>
                         <p class="home-loan-text">
                             We'll support you in generating leads and marketing, as well as implementing 
@@ -57,8 +57,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="grid-element border">
-                    <div class="grid-text-wrapper">
+                <div class="citizens-advantage-grid-element border">
+                    <div class="citizens-advantage-grid-text-wrapper">
                         <div class="home-loan-title">Closing on-time, every time</div>
                         <p class="home-loan-text">
                             We expanded our regional operations centers to help to support you and take care of paperwork during closing time. Our one-team 
@@ -66,8 +66,8 @@
                         <p>
                     </div>
                 </div>
-                <div class="grid-element">
-                    <div class="grid-text-wrapper">
+                <div class="citizens-advantage-grid-element">
+                    <div class="citizens-advantage-grid-text-wrapper">
                         <div class="home-loan-title">You'll have a voice</div>
                         <p class="home-loan-text">
                             In order to give our customers the best service, we'll give you a real voice in how we operate. 
