Adding Meta Tags

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="content-language" content="en">
-    <meta name="description" content="Learn more about Citizens Bank loan, Home Lending, and banking options. Mortgage Loan Officers avalable today!" />
+    <meta name="description" content="Learn more about Citizens Bank loans, Home Lending, 
+    and banking options. Mortgage Loan Officers available today!" />
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="article" />
     <meta property="og:title" content="Citizens Bank: financial planning and aid" />
-    <meta property="og:description" content="Learn more about Citizens Bank loan, Home Lending, and banking options." />
+    <meta property="og:description" content="Learn more about Citizens Bank loans, Home Lending, and banking options." />
     <meta property="og:url" content="https://www.zxcvzxcvzxcv.com/" />
     <meta property="og:site_name" content="CitizensBank" />
     <meta property="og:image" content="https://www.zxcvzxcvzxcv.com/images/Layer50.png" />
